update information and adding a link to OpenShift

--- a/static/views/home.html
+++ b/static/views/home.html
@@ -9,7 +9,7 @@
 
 </div>
 <p align="center">
-	<a class="btn btn-primary btn-lg" href='https://github.com/cecile/meanexample' target='_blank' type="button" data-toggle="tooltip" data-placement="top" title="" data-original-title="Go to Github">
+	<a class="btn btn-primary btn-lg" href='https://github.com/cecile/openshift' target='_blank' type="button" data-toggle="tooltip" data-placement="top" title="" data-original-title="Go to Github">
 		<span class="glyphicon glyphicon-download"></span> Get the source
 	</a>
 </p>
